[gd_scene load_steps=13 format=2]

[ext_resource path="res://characters/player/player.gd" type="Script" id=1]
[ext_resource path="res://characters/player/tractor_beam/tractor_beam.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/player/hatch/hatch.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/sfx/metal_bang_fast_02.mp3str" type="AudioStream" id=4]
[ext_resource path="res://characters/player/ufo/ufo.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/player/weapon/weapon.tscn" type="PackedScene" id=6]
[ext_resource path="res://audio/sfx/metal_bang_fast_03.mp3str" type="AudioStream" id=7]
[ext_resource path="res://audio/sfx/metal_bang_slow_01.mp3str" type="AudioStream" id=8]
[ext_resource path="res://audio/sfx/metal_bang_slow_02.mp3str" type="AudioStream" id=9]
[ext_resource path="res://audio/sfx/metal_bang_slow_03.mp3str" type="AudioStream" id=10]
[ext_resource path="res://audio/sfx/metal_bang_fast_01.mp3str" type="AudioStream" id=11]

[sub_resource type="CylinderShape" id=1]
height = 0.436533

[node name="Player" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
collision_mask = 0
mass = 100.0
gravity_scale = 0.0
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
_movement_acceleration = 2000
_energy_regeneration = 1.0
_damage_sounds = [ ExtResource( 11 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ]

[node name="Collider" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Pivot" type="Spatial" parent="."]

[node name="UFO" parent="Pivot" instance=ExtResource( 5 )]

[node name="AimMarker" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -30, 0 )
collision_mask = 32

[node name="SpotLight" type="SpotLight" parent="AimMarker"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
light_energy = 5.0
spot_range = 11.0
spot_attenuation = 0.032352
spot_angle = 4.23551

[node name="CameraArm" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866026, 0, -0.866026, 0.5, 0, -30, 0 )

[node name="Camera" type="Camera" parent="CameraArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 60 )
fov = 40.0
size = 25.0

[node name="TractorBeam" parent="." instance=ExtResource( 2 )]

[node name="Hatch" parent="." instance=ExtResource( 3 )]

[node name="Weapon" parent="." instance=ExtResource( 6 )]

[node name="SFX" type="Node" parent="."]
